# home-assignment

./: .gitignore  docker-compose.yml
be-high-level/: Dockerfile  pom.xml
be-high-level/src/main/java/com/project/bedemo/: BeDemoApplication.java
be-high-level/src/main/java/com/project/bedemo/api/: ApiController.java  LoginRequest.java
be-high-level/src/main/java/com/project/bedemo/service/: GameService.java  LoginService.java
be-high-level/src/main/resources/: application.properties
be-high-level/src/test/java/com/project/bedemo/service/: GameServiceTest.java  LoginServiceTest.java  MutableClock.java
be-low-level/: .dockerignore  Cargo.toml  Dockerfile  README.md
be-low-level/src/: api.rs  game_service.rs  login_service.rs  main.rs
