[package]
name = "be-low-level"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
chrono = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "5.5"
once_cell = "1.19"
rand = "0.8"

[dev-dependencies]
mockall = "0.12"
